
[metadata]
name = plot_cvf
version = 0.0.0a1
author = Cory Frontin
author_email = cory.frontin@nrel.gov
description = A package for quick high-quality common plots
long_description = file: README.md
# url = 
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent
# license_files = LICENSE.txt
# install_requires = 
#   requests

[options]
# package_dir == plot_cvf
packages =
  plot_cvf
python_requires = >= 3.8

# [options.packages.find]
# where = plot_cvf

[options.entry_points]
console_scripts =
  blade_viz = plot_cvf.nrel_tools.blade_viz:main
