
[metadata]
name = tools_cvf
version = 0.0.0a1
author = Cory Frontin
author_email = cory.frontin@nrel.gov
description = A package for quick high-quality common plots and tools
long_description = file: README.md
# url = 
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent
# license_files = LICENSE.txt
# install_requires = 
#   requests

[options]
# package_dir == tools_cvf
packages =
  tools_cvf
python_requires = >= 3.8

# [options.packages.find]
# where = tools_cvf

[options.entry_points]
console_scripts =
  blade_viz = tools_cvf.nrel_tools.blade_viz:main
  yaml_stretcher = tools_cvf.nrel_tools.yaml_stretcher:main
